--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ukui-biometric-auth (1.0.3-1) unstable; urgency=medium
+
+  * Bugfix: ukui-polkit does not load translation.
+  * Add biodrvctl to control devices' driver enable or disable.
+  * Add display the current device's name when biometric authentication.
+
+ -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 03 Jan 2019 13:58:34 +0800
+
 ukui-biometric-auth (1.0.2-1) unstable; urgency=medium
 
   * Initial release. (Closes: #908469)
