--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ukui-biometric-auth (1.2.3-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Allen <zouchang@kylinos.cn>  Thu, 04 Nov 2021 19:00:26 +0800
+
 ukui-biometric-auth (1.2.2-1) unstable; urgency=medium
 
   * New upstream release.
